--- a/compose.html
+++ b/compose.html
@@ -907,13 +907,14 @@
   /* 背景图片容器 - 近乎全屏的圆角图片 */
   .compose-background {
     position: relative;
-    width: 95%;
+    width: 100%;
     max-width: 100%;
     height: 90vh;
     min-height: 600px;
     border-radius: 24px;
     overflow: hidden;
     z-index: 0;
+    box-sizing: border-box;
   }
 
   .compose-background-image {
@@ -921,6 +922,7 @@
     height: 100%;
     object-fit: cover;
     display: block;
+    box-sizing: border-box;
   }
 
   /* 内容覆盖层 - 定位在左下角，减少空隙 */
@@ -995,7 +997,7 @@
   /* 响应式设计 */
   @media (max-width: 991px) {
     .compose-container {
-      padding: var(--spacing-md) var(--spacing-lg);
+      padding: var(--spacing-md) 3rem;
     }
 
     .compose-background {
@@ -1025,7 +1027,7 @@
 
   @media (max-width: 767px) {
     .compose-container {
-      padding: var(--spacing-sm) var(--spacing-md);
+      padding: var(--spacing-sm) 1.5rem;
     }
 
     .compose-background {
@@ -1890,7 +1892,7 @@
   position: relative;
   max-width: 1520px;
   margin: 0 auto;
-  padding: 0 40px;
+  padding: 0 3rem;
 }
 
 /* 上方大框 */
@@ -1900,7 +1902,7 @@
   border: 1px solid rgba(255, 255, 255, 0.1);
   border-radius: 16px;
   padding: 110px 60px;
-  margin-top: 40px;      /* 整体下移 */
+  margin-top: 3rem;      /* 整体下移 */
   margin-bottom: 20px;
   overflow: hidden;
   width: 100%;           /* 宽度：可调整（100% 表示容器宽度）*/
@@ -2107,7 +2109,7 @@
 @media (max-width: 991px) {
   .footer-main {
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 40px;
+    gap: 3rem;
   }
 
   .footer-brand {
@@ -2115,7 +2117,7 @@
   }
 
   .footer-main-box {
-    padding: 40px 30px;
+    padding: 3rem 30px;
   }
 
   .footer-bottom-box {
@@ -2125,16 +2127,16 @@
 
 @media (max-width: 767px) {
   .footer-section {
-    padding: 40px 0 0;
+    padding: 3rem 0 0;
   }
 
   .footer-container {
-    padding: 0 20px;
+    padding: 0 1.5rem;
   }
 
   .footer-main {
     grid-template-columns: 1fr;
-    gap: 40px;
+    gap: 3rem;
   }
 
   .footer-brand {
@@ -2152,7 +2154,7 @@
 
   .footer-bottom-box {
     padding: 20px;
-    margin-bottom: 40px;
+    margin-bottom: 3rem;
   }
 
   .footer-bottom {
