--- a/sections/footer/footer.html
+++ b/sections/footer/footer.html
@@ -9,7 +9,7 @@
   position: relative;
   max-width: 1520px;
   margin: 0 auto;
-  padding: 0 40px;
+  padding: 0 3rem;
 }
 
 /* 上方大框 */
@@ -19,7 +19,7 @@
   border: 1px solid rgba(255, 255, 255, 0.1);
   border-radius: 16px;
   padding: 110px 60px;
-  margin-top: 40px;      /* 整体下移 */
+  margin-top: 3rem;      /* 整体下移 */
   margin-bottom: 20px;
   overflow: hidden;
   width: 100%;           /* 宽度：可调整（100% 表示容器宽度）*/
@@ -226,7 +226,7 @@
 @media (max-width: 991px) {
   .footer-main {
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 40px;
+    gap: 3rem;
   }
 
   .footer-brand {
@@ -234,7 +234,7 @@
   }
 
   .footer-main-box {
-    padding: 40px 30px;
+    padding: 3rem 30px;
   }
 
   .footer-bottom-box {
@@ -244,16 +244,16 @@
 
 @media (max-width: 767px) {
   .footer-section {
-    padding: 40px 0 0;
+    padding: 3rem 0 0;
   }
 
   .footer-container {
-    padding: 0 20px;
+    padding: 0 1.5rem;
   }
 
   .footer-main {
     grid-template-columns: 1fr;
-    gap: 40px;
+    gap: 3rem;
   }
 
   .footer-brand {
@@ -271,7 +271,7 @@
 
   .footer-bottom-box {
     padding: 20px;
-    margin-bottom: 40px;
+    margin-bottom: 3rem;
   }
 
   .footer-bottom {
